[gd_scene load_steps=3 format=3 uid="uid://btysv8q6rp8ku"]

[ext_resource type="Script" path="res://panel_option.gd" id="2_fkx3e"]

[sub_resource type="Theme" id="Theme_sy0ln"]
default_font_size = 100

[node name="PanelOption" type="PanelContainer"]
offset_right = 957.0
offset_bottom = 626.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_sy0ln")
script = ExtResource("2_fkx3e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Edit URLs"

[node name="VersionLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "gd4clockcal v2.0.0"

[node name="WeatherLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "weather"

[node name="WeatherLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HBoxContainer/ButtonOK")
focus_neighbor_bottom = NodePath("../HBoxContainer/ButtonOK")
focus_next = NodePath("../HBoxContainer/ButtonOK")
focus_previous = NodePath("../HBoxContainer/ButtonOK")

[node name="DayInfoLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "dayinfo"

[node name="DayInfoLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../HBoxContainer/ButtonOK")
focus_neighbor_bottom = NodePath("../HBoxContainer/ButtonOK")
focus_next = NodePath("../HBoxContainer/ButtonOK")
focus_previous = NodePath("../HBoxContainer/ButtonOK")

[node name="BackgroundLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "background"

[node name="BackgroundLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../HBoxContainer/ButtonOK")
focus_neighbor_bottom = NodePath("../HBoxContainer/ButtonOK")
focus_next = NodePath("../HBoxContainer/ButtonOK")
focus_previous = NodePath("../HBoxContainer/ButtonOK")

[node name="DummyControl" type="Control" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="ButtonOK" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../ButtonCancel")
focus_neighbor_top = NodePath("../../WeatherLineEdit")
focus_neighbor_right = NodePath("../ButtonCancel")
focus_neighbor_bottom = NodePath("../../WeatherLineEdit")
focus_next = NodePath("../ButtonCancel")
focus_previous = NodePath("../ButtonCancel")
text = "OK"

[node name="ButtonCancel" type="Button" parent="VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../ButtonOK")
focus_neighbor_top = NodePath("../../WeatherLineEdit")
focus_neighbor_right = NodePath("../ButtonOK")
focus_neighbor_bottom = NodePath("../../WeatherLineEdit")
focus_next = NodePath("../ButtonOK")
focus_previous = NodePath("../ButtonOK")
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/GridContainer/HBoxContainer/ButtonOK" to="." method="_on_button_ok_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/HBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
